survey-salesforce/salesforce-app/src/objects/Submission__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPIScore__c</fullName>
        <label>PPI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploaded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>SubmissionXMLMD5__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>MD5 base64 encoded of the XML, this is used to avoid duplicates submissions.</description>
        <label>Submission XML MD5</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SurveyVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyVersion</label>
        <referenceTo>SurveyVersion__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Surveyor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surveyor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions (Surveyor)</relationshipLabel>
        <relationshipName>SubmissionObtained</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gps_approximation__c</fullName>
        <label>gps Approximation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_x__c</fullName>
        <label>gps x</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_y__c</fullName>
        <label>gps y</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <type>DateTime</type>
    </fields>
    <label>Submission</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GPS_coordinates</fullName>
        <active>true</active>
        <errorConditionFormula>OR(gps_x__c &gt; 180,gps_x__c &lt; -180,gps_y__c &gt; 90,gps_y__c &lt; -90)</errorConditionFormula>
        <errorMessage>Invalid GPS coordinates</errorMessage>
    </validationRules>
</CustomObject>